Updated 2 files via CloudCannon.

--- a/surge/auto-insurance.html
+++ b/surge/auto-insurance.html
@@ -1,22 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>[Insurance Agency] | Auto Quotes</title>
 <!--SEO Meta Tags-->
 <meta name="keywords" content="" />
-<meta name="description" content="">
-<meta name="author" content="EZLynx">
+<meta name="description" content="" />
+<meta name="author" content="EZLynx" />
 <link rel="canonical" href="https://www.insuranceagency/auto-insurance.html" />
 <!--Google Font & Links-->
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css'>
-<link href="https://agencywebsites.ezlynx.com/bootstrap3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link href="css/master.css" rel="stylesheet" type="text/css">
-<link href="css/media-queries.css" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css' />
+<link href="https://agencywebsites.ezlynx.com/bootstrap3/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="css/master.css" rel="stylesheet" type="text/css" />
+<link href="css/media-queries.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="img/favicon.ico" type="image/ico" />
 
-<link rel="stylesheet" href="https://agencywebsites.ezlynx.com/styles/font-awesome.min.css">
+<link rel="stylesheet" href="https://agencywebsites.ezlynx.com/styles/font-awesome.min.css" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=TRACKINGID"></script>
@@ -46,7 +46,7 @@
   <div class="main-banner">
     <div class="container">
       <div class="row">
-        <div class="col-md-2 col-sm-3 col-xs-9 logo-sec"><a href="index.html" title="[Insurance Agency]" class="logo-anchor"> <img src="img/agency-name.png" alt="[Insurance Agency]" id="agency-logo" class="img-responsive logo-size editable"> </a> </div>
+        <div class="col-md-2 col-sm-3 col-xs-9 logo-sec"><a href="index.html" title="[Insurance Agency]" class="logo-anchor"> <img src="img/agency-name.png" alt="[Insurance Agency]" id="agency-logo" class="img-responsive logo-size editable" /> </a> </div>
         <div class="col-md-10 col-sm-9 col-xs-12 nav-menu">
           <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header nav-main">
@@ -94,7 +94,7 @@
 </header>
   <section class="mid-section">
 	<div class="ban-image">
-	<img src="img/featured-auto-insurance.jpg" alt="Texlandia Auto owners with auto insurance coverage" class="banner-image-inner editable" id="banner">	
+	<img src="img/featured-auto-insurance.jpg" alt="Texlandia Auto owners with auto insurance coverage" class="banner-image-inner editable" id="banner" />	
 	</div>
 	<div class="quote-form-inner">
       <div class="container">
@@ -108,7 +108,7 @@
               <div class="search-type">
                 <div class="col-md-6 col-sm-6 col-xs-12 search-location-inside">
                   <label for="ZipCode" class="hidden-xs">Your Zip Code:</label>
-                  <input type="text" onkeypress="return numbersonly(event, false)" name="Zip" id="ZipCode" value="Your Zip Code" maxlength="5" class="form-control zip"/>
+                  <input type="text" onkeypress="return numbersonly(event, false)" name="Zip" id="ZipCode" value="Your Zip Code" maxlength="5" class="form-control zip" />
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                   <label for="Type" class="hidden-xs">Type of Insurance:</label>
@@ -132,13 +132,21 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 col-sm-12 editable" id="main-content">
-      <h1 class="heading-split"><span class="title-active">Auto</span> Insurance</h1>
+      <h1 class="heading-split"><span class="title-active">Auto</span> Insurance new</h1>
       <p>Auto insurance is a complicated matter. Many people have an insurance policy but do not exactly understand how they are covered or what they will do if they find themselves in the position of needing to utilize their insurance. Discover the basic types of car insurance and find out how to obtain the coverage you need for your particular situation.</p>
       <ul>
-        <li><b>Collision Coverage</b> &ndash; This is the basic insurance type that covers your vehicle if you collide into something. This covers collisions with other cars as well as if you were to run into a wall, barrier or bridge.</li>
-        <li><b>Comprehensive Coverage</b> &ndash; This covers anything that may happen to your car that is not directly related to a collision. This would include things such as theft, fire, hitting a deer or vandalism.</li>
-        <li><b>Liability Coverage</b> &ndash; This type of coverage covers the damages when you are at fault in an accident and you damage someone else’s car or property. Liability coverage is often mandated by law, so it is important that you as the driver make certain you have an adequate amount.</li>
-        <li><b>Medical Payments</b> &ndash; This is also called PIP in some states. Medical payments pay for any injuries to the driver or passengers that occur if an accident occurred while you were driving. Medical payment insurance varies from state to state, so make certain you are covered as expected.</li>
+        <li>
+          <p><b>Collision Coverage</b> – This is the basic insurance type that covers your vehicle if you collide into something. This covers collisions with other cars as well as if you were to run into a wall, barrier or bridge.</p>
+        </li>
+        <li>
+          <p><b>Comprehensive Coverage</b> – This covers anything that may happen to your car that is not directly related to a collision. This would include things such as theft, fire, hitting a deer or vandalism.</p>
+        </li>
+        <li>
+          <p><b>Liability Coverage</b> – This type of coverage covers the damages when you are at fault in an accident and you damage someone else’s car or property. Liability coverage is often mandated by law, so it is important that you as the driver make certain you have an adequate amount.</p>
+        </li>
+        <li>
+          <p><b>Medical Payments</b> – This is also called PIP in some states. Medical payments pay for any injuries to the driver or passengers that occur if an accident occurred while you were driving. Medical payment insurance varies from state to state, so make certain you are covered as expected.</p>
+        </li>
       </ul>
       <p> Now that you understand a bit more about the different types of auto insurance available, you are probably ready to find the right coverage for you. The best way to do this is to work with an independent agency that will allow you to compare insurance quotes online. By doing this, you can rest assured you are getting the best deal as well as getting the personal attention you need.</p>
     </div>
@@ -190,13 +198,13 @@
 	<div class="ins-nslider">
       <h5 class="editable" id="carriers-ed"><span class="title-active">Partner</span> Carriers</h5>
 	  <ul id="logoslider">
-	        <li><img src="img/carriers/allied.png" alt="Allied"> </li>
-            <li><img src="img/carriers/cna.png" alt="CNA"> </li>
-            <li><img src="img/carriers/infinity.png" alt="Infinity"> </li>
-		    <li><img src="img/carriers/progressive.png" alt="Progressive"> </li>
-		    <li><img src="img/carriers/safeco.png" alt="Safeco"> </li>
-		    <li><img src="img/carriers/secura.png" alt="Secura"> </li>
-		    <li><img src="img/carriers/the-hartford.png" alt="The Hartford"> </li>
+	        <li><img src="img/carriers/allied.png" alt="Allied" /> </li>
+            <li><img src="img/carriers/cna.png" alt="CNA" /> </li>
+            <li><img src="img/carriers/infinity.png" alt="Infinity" /> </li>
+		    <li><img src="img/carriers/progressive.png" alt="Progressive" /> </li>
+		    <li><img src="img/carriers/safeco.png" alt="Safeco" /> </li>
+		    <li><img src="img/carriers/secura.png" alt="Secura" /> </li>
+		    <li><img src="img/carriers/the-hartford.png" alt="The Hartford" /> </li>
 	   
 	  </ul>
     </div>
@@ -211,7 +219,7 @@
       <ul class="footer-nav">
           <li> <i class="fa fa-angle-double-right"></i> <span><a href="index.html" title="Townsville Insurance Agents">Home</a></span> </li>
 		  <li> <i class="fa fa-angle-double-right"></i> <span><a href="about-us.html" title="About [Insurance Agency]">About Us</a></span> </li>
-          <li> <i class="fa fa-angle-double-right"></i><span> <a href="auto-insurance.html" title="Auto Insurance"  class="active">Auto Insurance</a></span> </li>
+          <li> <i class="fa fa-angle-double-right"></i><span> <a href="auto-insurance.html" title="Auto Insurance" class="active">Auto Insurance</a></span> </li>
           <li> <i class="fa fa-angle-double-right"></i><span> <a href="home-insurance.html" title="Home Insurance">Home Insurance</a> </span></li>
           <li> <i class="fa fa-angle-double-right"></i><span> <a href="commercial-insurance.html" title="Commercial Insurance">Commercial Insurance</a></span> </li>
           <li> <i class="fa fa-angle-double-right"></i><span> <a href="life-insurance.html" title="Life Insurance">Life Insurance</a></span> </li>
@@ -264,7 +272,7 @@
 			 <p> <a href="index.html" title="[Insurance Agency]">[Insurance Agency]</a> <span>| Website Development by <a href="https://www.ezlynx.com/" title="Agency Suites by EZLynx&reg; - Streamline your workflow &amp; improve your productivity with EZLynx&reg;" target="_blank" aria-label="(opens in a new tab)" rel="nofollow">EZLynx</a><sup>&reg;</sup></span> <span>&bull; Copyright &copy; <script language="JavaScript" type="text/javascript">document.write((new Date()).getFullYear());</script>.</span> <span> All Rights Reserved. </span></p>
 	  </div>
 	  <div class="col-md-6 foot-logo col-sm-6 col-xs-12">
-		<a href="index.html" title="[Insurance Agency]"><img src="img/agency-name.png" alt="[Insurance Agency]" class="img-responsive editable hidden-xs" id="agency-logo-foot"></a>
+		<a href="index.html" title="[Insurance Agency]"><img src="img/agency-name.png" alt="[Insurance Agency]" class="img-responsive editable hidden-xs" id="agency-logo-foot" /></a>
 	  </div>
     </div>
   </div>
