--- a/surge/about-us.html
+++ b/surge/about-us.html
@@ -1,22 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>About [Insurance Agency]</title>
 <!--SEO Meta Tags-->
 <meta name="keywords" content="" />
-<meta name="description" content="">
-<meta name="author" content="EZLynx">
+<meta name="description" content="" />
+<meta name="author" content="EZLynx" />
 <link rel="canonical" href="https://www.insuranceagency/about-us.html" />
 <!--Google Font & Links-->
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css'>
-<link href="https://agencywebsites.ezlynx.com/bootstrap3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link href="css/master.css" rel="stylesheet" type="text/css">
-<link href="css/media-queries.css" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css' />
+<link href="https://agencywebsites.ezlynx.com/bootstrap3/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="css/master.css" rel="stylesheet" type="text/css" />
+<link href="css/media-queries.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="img/favicon.ico" type="image/ico" />
 
-<link rel="stylesheet" href="https://agencywebsites.ezlynx.com/styles/font-awesome.min.css">
+<link rel="stylesheet" href="https://agencywebsites.ezlynx.com/styles/font-awesome.min.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=TRACKINGID"></script>
@@ -46,7 +46,7 @@
   <div class="main-banner">
     <div class="container">
       <div class="row">
-        <div class="col-md-2 col-sm-3 col-xs-9 logo-sec"><a href="index.html" title="[Insurance Agency]" class="logo-anchor"> <img src="img/agency-name.png" alt="[Insurance Agency]" id="agency-logo" class="img-responsive logo-size editable"> </a> </div>
+        <div class="col-md-2 col-sm-3 col-xs-9 logo-sec"><a href="index.html" title="[Insurance Agency]" class="logo-anchor"> <img src="img/agency-name.png" alt="[Insurance Agency]" id="agency-logo" class="img-responsive logo-size editable" /> </a> </div>
         <div class="col-md-10 col-sm-9 col-xs-12 nav-menu">
           <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header nav-main">
@@ -94,7 +94,7 @@
 </header>
   <section class="mid-section">
     <div class="ban-image">
-	<img src="img/featured-banner-inside.jpg" alt="About [Insurance Agency]" class="banner-image-inner editable" id="banner">	
+	<img src="img/featured-banner-inside.jpg" alt="About [Insurance Agency]" class="banner-image-inner editable" id="banner" />	
 	</div>
 	<div class="quote-form-inner">
       <div class="container">
@@ -108,7 +108,7 @@
               <div class="search-type">
                 <div class="col-md-6 col-sm-6 col-xs-12 search-location-inside">
                   <label for="ZipCode" class="hidden-xs">Your Zip Code:</label>
-                  <input type="text" onkeypress="return numbersonly(event, false)" name="Zip" id="ZipCode" value="Your Zip Code" maxlength="5" class="form-control zip"/>
+                  <input type="text" onkeypress="return numbersonly(event, false)" name="Zip" id="ZipCode" value="Your Zip Code" maxlength="5" class="form-control zip" />
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                   <label for="Type" class="hidden-xs">Type of Insurance:</label>
@@ -132,13 +132,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-7 col-sm-7 editable" id="main-content">
-      <h1 class="heading-split"><span class="title-active">About</span> Insurance Agency</h1>
-      <p>Coming Soon....
-      </p>
+        <h1 class="heading-split"><span class="title-active">About</span> Insurance Agency</h1>
+        <p>Coming Soon.... </p>
     </div>
     <div class="col-md-5 col-sm-5 side-bar non-jot">
       <h2 class="editable heading-split" id="right-heading"><span class="title-active">Contact</span> Insurance Agency</h2>
-      <img src="img/featured-img.png" alt="Content Banner Image" class="right-img img-responsive editable" id="featured-contact-image">
+      <img src="img/featured-img.png" alt="Content Banner Image" class="right-img img-responsive editable" id="featured-contact-image" />
       <div class="contact-info editable" id="cont-info">
          <ul>
           <li>
@@ -184,13 +183,13 @@
 	<div class="ins-nslider">
       <h5 class="editable" id="carriers-ed"><span class="title-active">Partner</span> Carriers</h5>
 	  <ul id="logoslider">
-	        <li><img src="img/carriers/allied.png" alt="Allied"> </li>
-            <li><img src="img/carriers/cna.png" alt="CNA"> </li>
-            <li><img src="img/carriers/infinity.png" alt="Infinity"> </li>
-		    <li><img src="img/carriers/progressive.png" alt="Progressive"> </li>
-		    <li><img src="img/carriers/safeco.png" alt="Safeco"> </li>
-		    <li><img src="img/carriers/secura.png" alt="Secura"> </li>
-		    <li><img src="img/carriers/the-hartford.png" alt="The Hartford"> </li>
+	        <li><img src="img/carriers/allied.png" alt="Allied" /> </li>
+            <li><img src="img/carriers/cna.png" alt="CNA" /> </li>
+            <li><img src="img/carriers/infinity.png" alt="Infinity" /> </li>
+		    <li><img src="img/carriers/progressive.png" alt="Progressive" /> </li>
+		    <li><img src="img/carriers/safeco.png" alt="Safeco" /> </li>
+		    <li><img src="img/carriers/secura.png" alt="Secura" /> </li>
+		    <li><img src="img/carriers/the-hartford.png" alt="The Hartford" /> </li>
 	   
 	  </ul>
     </div>
@@ -204,7 +203,7 @@
         <h2 class="editable" id="foot-qck-links">Quick Links</h2>
        <ul class="footer-nav">
           <li> <i class="fa fa-angle-double-right"></i> <span><a href="index.html" title="Townsville Insurance Agents">Home</a></span> </li>
-		  <li> <i class="fa fa-angle-double-right"></i> <span><a href="about-us.html" title="About [Insurance Agency]"  class="active">About Us</a></span> </li>
+		  <li> <i class="fa fa-angle-double-right"></i> <span><a href="about-us.html" title="About [Insurance Agency]" class="active">About Us</a></span> </li>
           <li> <i class="fa fa-angle-double-right"></i><span> <a href="auto-insurance.html" title="Auto Insurance">Auto Insurance</a></span> </li>
           <li> <i class="fa fa-angle-double-right"></i><span> <a href="home-insurance.html" title="Home Insurance">Home Insurance</a> </span></li>
           <li> <i class="fa fa-angle-double-right"></i><span> <a href="commercial-insurance.html" title="Commercial Insurance">Commercial Insurance</a></span> </li>
@@ -258,7 +257,7 @@
 			 <p> <a href="index.html" title="[Insurance Agency]">[Insurance Agency]</a> <span>| Website Development by <a href="https://www.ezlynx.com/" title="Agency Suites by EZLynx&reg; - Streamline your workflow &amp; improve your productivity with EZLynx&reg;" target="_blank" aria-label="(opens in a new tab)" rel="nofollow">EZLynx</a><sup>&reg;</sup></span> <span>&bull; Copyright &copy; <script language="JavaScript" type="text/javascript">document.write((new Date()).getFullYear());</script>.</span> <span> All Rights Reserved. </span></p>
 	  </div>
 	  <div class="col-md-6 foot-logo col-sm-6 col-xs-12">
-		<a href="index.html" title="[Insurance Agency]"><img src="img/agency-name.png" alt="[Insurance Agency]" class="img-responsive editable hidden-xs" id="agency-logo-foot"></a>
+		<a href="index.html" title="[Insurance Agency]"><img src="img/agency-name.png" alt="[Insurance Agency]" class="img-responsive editable hidden-xs" id="agency-logo-foot" /></a>
 	  </div>
     </div>
   </div>
