Updated 1 file via CloudCannon.

--- a/surge/auto-insurance.html
+++ b/surge/auto-insurance.html
@@ -196,7 +196,9 @@
 
 <div class="row carrier">
 	<div class="ins-nslider">
-      <h5 class="editable" id="carriers-ed"><span class="title-active">Partner</span> Carriers</h5>
+      <h5 class="editable" id="carriers-ed">
+        <span class="title-active">Our Partner</span> Carriers
+      </h5>
 	  <ul id="logoslider">
 	        <li><img src="img/carriers/allied.png" alt="Allied" /> </li>
             <li><img src="img/carriers/cna.png" alt="CNA" /> </li>
