Updated 1 file via CloudCannon.

--- a/surge/auto-insurance.html
+++ b/surge/auto-insurance.html
@@ -132,7 +132,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 col-sm-12 editable" id="main-content">
-      <h1 class="heading-split"><span class="title-active">Auto</span> Insurance new content</h1>
+      <h1 class="heading-split"><span class="title-active">Auto</span> Insurance new testing</h1>
       <p>Auto insurance is a complicated matter. Many people have an insurance policy but do not exactly understand how they are covered or what they will do if they find themselves in the position of needing to utilize their insurance. Discover the basic types of car insurance and find out how to obtain the coverage you need for your particular situation.</p>
       <ul>
         <li>
@@ -217,7 +217,9 @@
   <div class="container">
     <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12 hidden-xs">
-        <h2 class="editable" id="foot-qck-links">Quick Links</h2>
+        <h2 class="editable" id="foot-qck-links">
+          Quick Links
+        </h2>
       <ul class="footer-nav">
           <li> <i class="fa fa-angle-double-right"></i> <span><a href="index.html" title="Townsville Insurance Agents">Home</a></span> </li>
 		  <li> <i class="fa fa-angle-double-right"></i> <span><a href="about-us.html" title="About [Insurance Agency]">About Us</a></span> </li>
@@ -258,7 +260,9 @@
 		   </span>
           </li>
         </ul>
-        <h2 class="editable" id="foot-follow-us">Follow Us</h2>
+        <h2 class="editable" id="foot-follow-us">
+          Follow Us
+        </h2>
         <ul class="dwn-social">
           <li><i class="fa fa-facebook"></i><a href="https://www.facebook.com/ezlynx" title="Like [Insurance Agency] on Facebook" target="_blank" aria-label="(opens in a new tab)" rel="nofollow"> Facebook</a></li>
           <li><i class="fa fa-twitter"></i><a href="https://twitter.com/ezlynx" title="Follow [Insurance Agency] on Twitter" target="_blank" aria-label="(opens in a new tab)" rel="nofollow"> Twitter</a></li>
