Updated 1 file via CloudCannon.

--- a/surge/auto-insurance.html
+++ b/surge/auto-insurance.html
@@ -136,7 +136,7 @@
       <p>Auto insurance is a complicated matter. Many people have an insurance policy but do not exactly understand how they are covered or what they will do if they find themselves in the position of needing to utilize their insurance. Discover the basic types of car insurance and find out how to obtain the coverage you need for your particular situation.</p>
       <ul>
         <li>
-          <p><b>Collision Coverage</b> – This is the basic insurance type that covers your vehicle if you collide into something. This covers collisions with other cars as well as if you were to run into a wall, barrier or bridge.</p>
+          <p><b>Collision Coverage</b>&nbsp;: This is the basic insurance type that covers your vehicle if you collide into something. This covers collisions with other cars as well as if you were to run into a wall, barrier or bridge.</p>
         </li>
         <li>
           <p><b>Comprehensive Coverage</b> – This covers anything that may happen to your car that is not directly related to a collision. This would include things such as theft, fire, hitting a deer or vandalism.</p>
