Updated 1 file via CloudCannon.

--- a/surge/auto-insurance.html
+++ b/surge/auto-insurance.html
@@ -132,7 +132,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 col-sm-12 editable" id="main-content">
-      <h1 class="heading-split"><span class="title-active">Auto</span> Insurance new testing</h1>
+      <h1 class="heading-split"><span class="title-active">Auto</span> Insurance new</h1>
       <p>Auto insurance is a complicated matter. Many people have an insurance policy but do not exactly understand how they are covered or what they will do if they find themselves in the position of needing to utilize their insurance. Discover the basic types of car insurance and find out how to obtain the coverage you need for your particular situation.</p>
       <ul>
         <li>
