Updated 1 file via CloudCannon.

--- a/surge/about-us.html
+++ b/surge/about-us.html
@@ -100,7 +100,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-10 col-sm-10 quote-box inside">
-                   <h5 class="editable heading-split" id="get-quote">Get A Quote</h5>
+                   <h5 class="editable heading-split" id="get-quote">
+                       Get
+                   </h5>
             <i class="fa fa-caret-down fa-2x visible-xs"></i>
             <h6 class="hidden-xs heading-split editable" id="quote-tagline">&amp; see how much you could save.</h6>
             <div class="row quote-box-form">
